/*
 * $Id: ChangeLog,v 1.3689 2004/12/21 13:51:19 mauriliolongo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-12-21 15:40 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   ! source/codepage/cpdos437.c
     ! it has to "point" to unicode 437 UNITB_437, fixed

2004-12-21 14:40 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/codepage/Makefile
     + added cpdos437.c
   + source/codepage/cpdos437.c
     + codepage 437 of italian DOS (grave and acute accented wovels)
   * source/codepage/cpitiso.c
   * source/codepage/cpitisb.c
     ! added grave accented wovels

2004-12-20 14:40 UTC-3 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/codepage/Makefile
    ! Fixed separator (some systems don't like spaces between file
      name and backslash)
  * source/ct/files.c
    ! Changes to HP-UX
  * include/inet.h
    ! HP-UX needs XOPEN_SOURCE_EXTENDED defined.
  * source/rtl/filesys.c
    ! Hack to fdatasync() prototype in HP-UX

2004-12-20 10:32 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/gtos2/gtos2.c
     ! inside dispend() decrease dispbegin() count only if it has not
       already reached zero.

2004-12-19 11:45 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * hrbdll.bc
    ! Added references to missing source/lang/msg*.c files in Borland make file

2004-12-19 14:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  * source/rtl/win32prn.prg
    + added SetColor(), Arc(), Ellipse() and FillRect() methods
  * tests/testw32p.prg
    + added sample for new methods
  + source/codepage/cpua866.c
  + source/codepage/cpuawin.c
  + source/codepage/cpuakoi.c
  + source/codepage/uckoi8u.c
    + added ukrainian codepages
  * source/codepage/Makefile
    + added support for ukrainian codepages
  * include/hbapicdp.h
    + added koi8-u codepage
  * source/lang/msgru866.c